--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,34 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Transport",
+  "name": "Teko Logistic Transport",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon-48x48.ico",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-96x96.ico",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-144x144.ico",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-192x192.ico",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-512x512.ico",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./index.html?homescreen=1",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
