--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html?homescreen=1",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
